<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="40dp"
            android:paddingTop="20dp"
            android:text="@string/text_event"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/usernameinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:padding="10dp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="" />
        
          <TextView
              android:id="@+id/authresult"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textColor="@color/red"
              android:textSize="20sp"
              android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login" />
        </LinearLayout>

        </LinearLayout>

    <TextView
        android:id="@+id/versionstring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center"
        android:padding="10dp"
        android:text="@string/versionstring"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>