<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="242dp"
        android:layout_height="349dp"
        android:src="@drawable/red"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_invalid"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/ScanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_scanning" 
                android:layout_weight="1"/>

            <Button
                android:id="@+id/VakuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_vaku" 
                android:layout_weight="1"/>

        </LinearLayout>
    
    <TextView
        android:id="@+id/scanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_scanning" 
        android:visibility="gone" >
    </TextView>

</LinearLayout>